Fixed an issue in which the #header-home overlay was covering the about section in tablet portrait mode. Adjusted image sizes to fit the entire width of their containing boxes.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -145,3 +145,14 @@
     font-size: 2rem;
   }
 }
+
+@media (max-device-width: 768px) {
+  #header-home {
+    height: 10rem;
+    border-bottom: 3px solid var(--primary-color);
+    background-position: 20% 30%;
+  }
+  #header-home .header-content {
+    display: none;
+  }
+}
